--- a/templates/base.html
+++ b/templates/base.html
@@ -10,35 +10,30 @@
 
 <body class="bg-gray-100">
 
-<nav class="bg-white border-b border-gray-200">
+<nav class="bg-white border-b border-gray-200 ">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between h-16 items-center">
       
       <div class="flex-shrink-0 flex items-center">
-        <span class="text-2xl font-bold text-blue-600">BrandLogo</span>
+        <a href="{% url 'home' %}" class="text-2xl font-bold text-blue-600">StayEase</a>
       </div>
 
       <div class="hidden md:flex space-x-8 items-center">
-        <a href="#" class="text-gray-600 hover:text-blue-600 font-medium transition">الرئيسية</a>
-        <a href="#" class="text-gray-600 hover:text-blue-600 font-medium transition">المميزات</a>
-        <a href="#" class="text-gray-600 hover:text-blue-600 font-medium transition">الأسعار</a>
-        <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded-lg hover:bg-blue-700 transition">ابدأ الآن</a>
+      {% if user.is_authenticated %}
+        <a href="{% url 'profile' %}" class="hover:text-blue-900">Profile ({{ user.username }})</a>
+        <a href="{% url 'logout' %}" class="hover:text-blue-900">Logout</a>
+      {% else %}
+        <a href="{% url 'login' %}" class="hover:text-blue-900">Login</a>
+        <a href="{% url 'register' %}" class="hover:text-blue-900">Sign Up</a>
+      {% endif %}
       </div>
-
-      <div class="md:hidden flex items-center">
-        <button class="text-gray-600 hover:text-gray-900 focus:outline-none">
-          <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-          </svg>
-        </button>
-      </div>
-
     </div>
   </div>
 </nav>
 
 <main class="pt-20 max-w-screen-xl mx-auto p-4">
     {% block content %}
+    
     {% endblock %}
 </main>
 
