--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
 <body class="bg-gray-100">
 
-<nav class="bg-white border-b border-gray-200 ">
+<nav class="bg-white border-b border-gray-200 flex ">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between h-16 items-center">
       
